Added in extra folder wwwAdmin for secondVM, this seperates there main directories, and changed secondVM settings to host a website that can access the contents of the database and change it

--- a/test-website1.conf
+++ b/test-website1.conf
@@ -9,8 +9,8 @@
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /vagrant/www1
-	<Directory /vagrant/www1/>
+	DocumentRoot /vagrant/wwwAdmin
+	<Directory /vagrant/wwwAdmin/>
 		Require all granted
 	</Directory>
 
